# zagreus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  renovate.json  renovate.json5
.github/: index.html  release.yml
.github/workflows/: build.yml  on-main.yml  on-pull-request.yml  on-release.yml
.run/: Run zagreus-server.run.xml  clippy.run.xml
docker/: Dockerfile
docs/config/: animation.md  element.md  template.md
docs/step-by-step/: animations.md  design-template.md  dynamic-image.md  dynamic-styling.md  dynamic-text.md  playout.md  setup.md  step-by-step.md
docs/step-by-step/template/: animations.css  index.html  main.css
e2e-test/: .gitignore  cypress.config.ts  cypress.json  package-lock.json  package.json  prepare_e2e.sh  tsconfig.json
e2e-test/cypress/e2e/: test.cy.ts
e2e-test/cypress/integration/: test.ts
e2e-test/cypress/plugins/: index.js
e2e-test/fixtures/: animations.yaml  elements.yaml  template.afdesign  zagreus-template.yaml
e2e-test/template/: animations.css  index.html  main.css
package/: package.ps1  package.sh
zagreus-generator/: .gitignore  Cargo.toml
zagreus-generator/fixtures/html/: valid_processed.html  valid_raw.html
zagreus-generator/src/: asset.rs  cli.rs  error.rs  file_watcher.rs  html.rs  jobs.rs  logger.rs  main.rs  new.rs  transform.rs  upload.rs  zip.rs
zagreus-generator/src/data/: element.rs  mod.rs  validation.rs
zagreus-generator/src/data/animation/: config.rs
zagreus-generator/src/data/text/: config.rs
zagreus-generator/src/fs/: mod.rs  temp.rs
zagreus-generator/src/new/: mod.rs
zagreus-generator/src/upload/: mod.rs
zagreus-runtime/: .eslintignore  .eslintrc.json  .prettierignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
zagreus-runtime/src/: constants.ts  error.ts  runtime.ts  setup.ts  utils.ts
zagreus-runtime/src/data/: data.ts
zagreus-runtime/src/manipulation/: animation.ts  css.ts  custom-variable.ts  image.ts  manipulation.ts  text.ts  transform.ts  use.ts
zagreus-runtime/src/websocket/: run.ts  template-websocket.ts  types.ts  websocket-handler.ts  websocket-sender.ts
zagreus-server/: .gitignore  Cargo.toml
zagreus-server/src/: cli.rs  error.rs  logger.rs  main.rs
zagreus-server/src/config/: loader.rs  mod.rs
zagreus-server/src/controller/: mod.rs
zagreus-server/src/data/: asset.rs  config.rs  mod.rs
zagreus-server/src/data/animation/: config.rs
zagreus-server/src/data/text/: config.rs
zagreus-server/src/endpoint/: asset.rs  data.rs  mod.rs  openapi.rs  routes.rs  state.rs  template.rs  websocket.rs
zagreus-server/src/fs/: mod.rs  temp.rs  util.rs  zip.rs
zagreus-server/src/template/: event.rs  mod.rs  registry.rs
zagreus-server/src/websocket/: connection.rs  message.rs  mod.rs  server.rs
zagreus-swagger-docs/: index.html  package-lock.json  package.json  spec.yaml
