[package]
name = "zagreus-generator"
version = "0.0.5"
authors = ["Mario Kaufmann <mario.kaufmann@bluemail.ch>"]
edition = "2021"

[dependencies]
anyhow = "1.0.60"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["blocking", "multipart"] }
serde = "1.0.142"
serde_derive = "1.0.142"
serde_json = "1.0.83"
serde_yaml = "0.9.4"
xml-rs = "0.8.4"
zip = "0.6.2"
walkdir = "2.3.2"
structopt = "0.3.26"
notify = "4.0.17"

[dependencies.log4rs]
version = "1.1.1"
default-features = false
features = ["console_appender"]

[dev-dependencies]
rand = "0.8.5"
