[package]
name = "zagreus-generator"
version = "0.0.6"
authors = ["Mario Kaufmann <mario.kaufmann@bluemail.ch>"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["blocking", "multipart"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
xml-rs = "0.8.4"
zip = "0.6.3"
walkdir = "2.3.2"
structopt = "0.3.26"
notify = "5.0.0"

[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender"]

[dev-dependencies]
rand = "0.8.5"
