[package]
name = "zagreus-server"
version = "0.0.9"
authors = ["Mario Kaufmann <mario.kaufmann@bluemail.ch>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["json", "http1", "http2", "ws", "multipart"]}
log = "0.4.20"
futures = "0.3.29"
hyper = "1.0.1"
rand = "0.8.5"
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
structopt = "0.3.26"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.14"
tower = { version = "0.4.13", features = ["filter"]}
tower-http = { version = "0.5.0", features = ["fs", "trace"]}
zip = "0.6.6"
sha2 = "0.10.8"

[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender", "rolling_file_appender", "fixed_window_roller", "size_trigger", "compound_policy", "json_encoder"]

[dev-dependencies]
tokio-tungstenite = "0.20.1"
tungstenite = "0.20.1"
