[package]
name = "zagreus-server"
version = "0.0.9"
authors = ["Mario Kaufmann <mario.kaufmann@bluemail.ch>"]
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["json", "http1", "http2", "ws", "multipart"]}
log = "0.4.21"
futures = "0.3.30"
hyper = "1.2.0"
rand = "0.8.5"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
structopt = "0.3.26"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.15"
tower = { version = "0.4.13", features = ["filter"]}
tower-http = { version = "0.5.2", features = ["fs", "trace"]}
zip = "1.1.3"
sha2 = "0.10.8"

[dependencies.log4rs]
version = "1.3.0"
default-features = false
features = ["console_appender", "rolling_file_appender", "fixed_window_roller", "size_trigger", "compound_policy", "json_encoder"]

[dev-dependencies]
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
