[package]
name = "zagreus-server"
version = "0.0.9"
authors = ["Mario Kaufmann <mario.kaufmann@bluemail.ch>"]
edition = "2024"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.8.1", features = ["json", "http1", "http2", "ws", "multipart"] }
log = "0.4.21"
futures = "0.3.30"
rand = "0.9.0"
serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.116"
structopt = "0.3.26"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.15"
tower = { version = "0.5.1", features = ["filter"] }
tower-http = { version = "0.6.0", features = ["fs", "trace"] }
sha2 = "0.10.8"

[dependencies.log4rs]
version = "1.3.0"
default-features = false
features = ["console_appender", "rolling_file_appender", "fixed_window_roller", "size_trigger", "compound_policy", "json_encoder"]

[dev-dependencies]
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
